a1/brendan_gordon/TEST_PROGRAMS/invalidtype/evan_vassallo/prog5.min
var i : int;
var l : float;

l = l + i;

while l do
  l = l - 1.0;
done

